--- a/index.html
+++ b/index.html
@@ -15,63 +15,63 @@
         <p id="label">Викторина</p>
         <p id="result"></p>
         <div class="firstRow">
-            <div id="quession1">
+            <div id="question1">
                 <p>Какая страна не входит в состав Великобритании?</p>
                 <p id="a">A. Шотландия</p>
                 <p id="b">B. Ирландия</p>
                 <p id="c">C. Норвегия</p>
                 <p id="d">D. Англия</p>
             </div>
-            <div id="quession2">
+            <div id="question2">
                 <p>Kакой вариант из перечисленного не относиться к водопадам? </p>
                 <p id="a">A. Ниагара</p>
                 <p id="b">B. Виктория </p>
                 <p id="c">C. Анхель</p>
                 <p id="d">D. Волга</p>
             </div>
-            <div id="quession3">
+            <div id="question3">
                 <p>Какое из перечисленных животных относится к хищникам? </p>
                 <p id="a">A. Заяц</p>
                 <p id="b">B. Медведь</p>
                 <p id="c">C. Корова</p>
                 <p id="d">D. Слон</button>
             </div>
-            <div id="quession4">
+            <div id="question4">
                 <p>Какие из перечисленных не является планетой?</p>
                 <p id="a">A. Земля</button>
                 <p id="b">B. Юпитер</p>
                 <p id="c">C. Нептун</p>
                 <p id="d">D. Луна</p>
             </div>
-            <div id="quession5">
+            <div id="question5">
                 <p>Kакоe насекомое рождается из гусеницы? </p>
                 <p id="a">A. Стрекоза</p>
                 <p id="b">B. Бабочка</p>
                 <p id="c">C. Муха</p>
                 <p id="d">D. Слон</p>
             </div>
-            <div id="quession6">
+            <div id="question6">
                 <p>Какая страна является родиной панды </p>
                 <p id="a">A. Китай</p>
                 <p id="b">B. Северная Америка</p>
                 <p id="c">C. Россия</p>
                 <p id="d">D. Индия</p>
             </div>
-            <div id="quession7">
+            <div id="question7">
                 <p>Сколько минут в одних сутках? </p>
                 <p id="a">A. 125</p>
                 <p id="b">B. 789</p>
                 <p id="c">C. 2100</p>
                 <p id="d">D. 1440</p>
             </div>
-            <div id="quession8">
+            <div id="question8">
                 <p>Какая птица самая большая? </p>
                 <p id="a">A. Орел</p>
                 <p id="b">B. Страус</p>
                 <p id="c">C. Курица</p>
                 <p id="d">D. Фламинго</p>
             </div>
-            <div id="quession9">
+            <div id="question9">
                 <p>Cколько планет в Солнечной Системе</p>
                 <p id="a">A. 10</p>
                 <p id="b">B. 12</p>
@@ -79,7 +79,7 @@
                 <p id="d">D. 9
                 <p>
             </div>
-            <div id="quession10">
+            <div id="question10">
                 <p>Какое озеро самое глубокое?</p>
                 <p id="a">A. Байкал</p>
                 <p id="b">B. Титикака</p>
@@ -87,7 +87,9 @@
                 <p id="d">D. Комо</p>
             </div>
         </div>
-        <script type="text/javascript" src="script.js"></script>
+    </div>
+
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 
